--- a/_posts/2022-06-12-Quasi-RNN.md
+++ b/_posts/2022-06-12-Quasi-RNN.md
@@ -170,8 +170,8 @@ $$
         - $L$: last layer, $c_t^L$: decoder ungated hidden states  
 <br/>
 
-## 3. Experiments
-### 3-1. Sentiment Classification
+# 3. Experiments
+## 3-1. Sentiment Classification
 <br/>
 <p align="center">
 <img src = "../assets/images/Quasi-RNN/exp_1.jpg" width="65%">
@@ -188,7 +188,7 @@ $$
     - small batch and long sequence length  
 <br/>
 
-### 3-2. Language Modeling
+## 3-2. Language Modeling
 <br/>
 <p align="center">
 <img src = "../assets/images/Quasi-RNN/exp_2.jpg" width="65%">
@@ -198,7 +198,7 @@ $$
 </p>
 <br/>
 
-### 3-3. Character-Level Neural Machine Translation
+## 3-3. Character-Level Neural Machine Translation
 <br/>
 <p align="center">
 <img src = "../assets/images/Quasi-RNN/exp_4.jpg" width="65%">
