clar 2.related works

--- a/_posts/2022-06-15-CLAR.md
+++ b/_posts/2022-06-15-CLAR.md
@@ -55,6 +55,31 @@ toc_sticky: false
 - hyper-parameter, noisy labels에 민감히고, margin도 약함 
 - **SupCon**에서 문제를 해결하고자함  
 
-| NT-Xent | SupCon |
-| :---:   | :---:  |
-| 같은 class의 set와 남은 다른 class와 비교 | 같은 이미지에서 augment한 이미지와 <br/> batch 내의 다른 이미지들과 비교|
+    | NT-Xent | SupCon |
+    | :---:   | :---:  |
+    | 같은 class의 set와 남은 다른 class와 비교 | 같은 이미지에서 augment한 이미지와 batch 내의 다른 이미지들과 비교|
+    | SSL | supervised |
+- CLAR에서는 supervised와 self-supervised 방식 힘께 사용
+- efficient representation & faster training  
+<br/>
+
+# 3. Methods
+## 1) Audio Pre-processing
+- raw audio signal과 time-frequency audio features로 실험 진행
+- 둘 다 16 kHz로 down-sampling 한 후에, 길이가 같아지도록 zero-padding 혹은 오른쪽 넘은 부분 clipping
+- **time-frequency audio features**
+    - 16ms windows and 8 ms stride STFT magnitude & phase 
+    - 128 frequency bins equally spaced on the Mel scale(128 mel filter) 
+    - STFT magnitude & mel spectrogram log-power
+        $$
+        f(S)=10log_{10}\vert S\vert^2
+        $$
+    - channel 축으로 STFT magnitude, phase, mel spectrogram concat >> $3\times F \times T$
+    - multi-domain audio signal(speech, environmental, music, etc) + ResNet 구조 유지
+    - GPU 1D convolutional Neural Network로 만듦 >> [nnaudio toolbox](https://github.com/KinWaiCheuk/nnAudio)
+
+## 2) Training/Evaluating Protocol
+
+## 3) Datasets
+
+# 4. CLAR Framework
