--- a/_posts/2022-06-15-CLAR.md
+++ b/_posts/2022-06-15-CLAR.md
@@ -7,7 +7,7 @@ published: true
 toc: true
 toc_sticky: false
 ---
-> WORKING ON THIS PAGE  
+  
 > [CLAR: Contrastive Learning of Auditory Representations](http://proceedings.mlr.press/v130/al-tahan21a/al-tahan21a.pdf)  
 > [CLAR github](https://github.com/haideraltahan/CLAR)
 
@@ -229,7 +229,6 @@ $$
 <br/>
 
 # 6. Data Augmentations For Constructive Learning
-<br/>
 <p align="center">
 <img src="../assets/images/CLAR/aug_result.png" width="75%">
 </p>  
@@ -248,7 +247,6 @@ $$
 <br/>
 
 # 7. Raw Signal vs Time-Frequency Features
-<br/>
 <p align="center">
 <img src="../assets/images/CLAR/1D2D_compare.png" width="75%">
 </p>  
@@ -285,6 +283,6 @@ $$
 - 특히 100% labeled data면 self-supervised보다 빠르고 정확도도 높음
 - labeled data 비율을 줄일수록 supervised와 차이가 점점 커짐
     - encoder의 latent representation을 개선하는 공통적인 representation이 self-supervised와 supervised에 있음
-- 학습 알고리즘이 $\mathcal{L}_{CE}$ 을 먼저 optimize한 다음에, $\mathcal{L}_{CL}$ 을 천천히 optimize
+- 학습 알고리즘이 Categorical Cross-Entropy loss를 먼저 optimize한 다음에, Contrastive loss를 천천히 optimize
 
 
