--- a/_posts/2022-06-15-CLAR.md
+++ b/_posts/2022-06-15-CLAR.md
@@ -1,6 +1,7 @@
 ---
 title: "CLAR: Contrastive Learning of Auditory Representations"
 date: 2022-06-15 23:39
+category: "논문 리뷰"
 tag: [Self-Supervised Learning, SSL, Audio]
 
 published: true
