--- a/_posts/2022-06-15-CLAR.md
+++ b/_posts/2022-06-15-CLAR.md
@@ -12,8 +12,9 @@ toc_sticky: false
 > [CLAR: Contrastive Learning of Auditory Representations](http://proceedings.mlr.press/v130/al-tahan21a/al-tahan21a.pdf)  
 > [CLAR github](https://github.com/haideraltahan/CLAR)
 
-연관 포스트: [Audio Self-supervised Learning: A Survey (2) Audio]({% post_url 2022-05-30-Audio-SSL-A-Survey-(2) %})   
-[CLAR]({% post_url 2022-06-17-SimCLR %})  
+연관 포스트: 
+1. [Audio Self-supervised Learning: A Survey (2) Audio]({% post_url 2022-05-30-Audio-SSL-A-Survey-(2) %})   
+2. [CLAR]({% post_url 2022-06-17-SimCLR %})  
 
 > **Abstract**
 > 1. 다양한 data augmentations  
