--- a/_posts/2022-06-17-SimCLR.md
+++ b/_posts/2022-06-17-SimCLR.md
@@ -43,7 +43,7 @@ contrastive self-supervised learning without specialized architectures or a memo
 ## 1) The Contrastive Learning Framework
 - latent space에서 같은 data를 다르게 augmentation한 view들의 agreement 최대화
 <p align="center">
-    <img src="../논문-리뷰/assets/images/SimCLR/fig2.png" width="50%">
+    <img src="../assets/images/SimCLR/fig2.png" width="50%">
 </p>  
 
 - 4가지 요소로 구성
@@ -82,8 +82,8 @@ contrastive self-supervised learning without specialized architectures or a memo
     <br/>  
 
     <p align="center">
-    <img src="../논문-리뷰/assets/images/SimCLR/algorithm.png" width="50%">
-    <img src="../논문-리뷰/assets/images/CLAR/minibatch.jpeg" width="25%">
+    <img src="../assets/images/SimCLR/algorithm.png" width="50%">
+    <img src="../assets/images/CLAR/minibatch.jpeg" width="25%">
     </p>  
 <br/>
 
@@ -125,7 +125,7 @@ contrastive self-supervised learning without specialized architectures or a memo
 - Conposition of data augmentation operation is crucial for learning good representation
 - spatial/geomatric 혹은 appearance transformation이 존재하고 아래 이미지들이 SimCLR에서 비교 및 분석한 실험들
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/fig4.png" width="70%">
+<img src="../assets/images/SimCLR/fig4.png" width="70%">
 </p>
 
 - 이미지 크기가 다르기 때문에 항상 crop >> crop의 영향을 알 수 없다는 문제
@@ -135,8 +135,8 @@ contrastive self-supervised learning without specialized architectures or a memo
     <br/>
 
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/fig5.png" width="70%">
-<img src="../논문-리뷰/assets/images/SimCLR/fig6.png" width="70%">
+<img src="../assets/images/SimCLR/fig5.png" width="70%">
+<img src="../assets/images/SimCLR/fig6.png" width="70%">
 <em><br/>윗줄(figure 4 이미지)과 아랫줄은 각각 다른 이미지</em>
 </p>
 
@@ -151,7 +151,7 @@ contrastive task에서 positive pair를 찾을 수 있지만, representation 결
 
 ## 2) Stronger data augmentation than supervised learning
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/tb1.png" width="70%">
+<img src="../assets/images/SimCLR/tb1.png" width="70%">
 </p>
 
 - Contrastive learning needs stronger data augmentation than supervised learning
@@ -163,7 +163,7 @@ contrastive task에서 positive pair를 찾을 수 있지만, representation 결
 # 4.Architectures for Encoder and Head
 ## 1) Bigger Models
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/fig7.png" width="50%">
+<img src="../assets/images/SimCLR/fig7.png" width="50%">
 </p>
 
 - Unsupervised constrastive learning benefits more from bigger models than its supervised counterpart
@@ -172,7 +172,7 @@ contrastive task에서 positive pair를 찾을 수 있지만, representation 결
 
 ## 2) Nonlinear projection head
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/fig8.png" width="65%">
+<img src="../assets/images/SimCLR/fig8.png" width="65%">
 <em> <br/>
 (1) identity mapping(None)  (2) linear projection(Linear)  <br/>
 (3) default nonlinear with one additional hidden layer(+ReLU)(Non-linear)</em>
@@ -199,14 +199,14 @@ contrastive task에서 positive pair를 찾을 수 있지만, representation 결
     - $g(h)=W^{(2)}\sigma(W^{(1)}h)$, input & output dimension 2048로 동일  
     
     <p align="center">
-    <img src="../논문-리뷰/assets/images/SimCLR/tb3.png" width="65%">
+    <img src="../assets/images/SimCLR/tb3.png" width="65%">
     </p>
     
     - $\mathbf{h}$ 에 transformation에 대한 정보가 더 많음을 확인 가능  
 
 3. **Appendix B.4. Understanding the Non-linear Projection Head**
     <p align="center">
-    <img src="../논문-리뷰/assets/images/SimCLR/figB3_4.png" width="90%">
+    <img src="../assets/images/SimCLR/figB3_4.png" width="90%">
     </p>
     
     - Figure B.3: linear projection matrix $\mathbf{z}=W\mathbf{h}$에 쓰인 $W \in \mathbb{R}^{2048\times 2048}$의 eigenvalues distribution  
@@ -219,7 +219,7 @@ contrastive task에서 positive pair를 찾을 수 있지만, representation 결
 # 5. Loss Functions and Batch Size
 ## 1) NT-Xent and temperature
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/tb2.png" width="85%">
+<img src="../assets/images/SimCLR/tb2.png" width="85%">
 </p>
 
 - Normalized cross entropy loss with adjustable temperature works better than alternatives
@@ -233,7 +233,7 @@ contrastive task에서 positive pair를 찾을 수 있지만, representation 결
 
 **<loss 비교>**
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/tb4.png" width="85%">
+<img src="../assets/images/SimCLR/tb4.png" width="85%">
 </p>
 
 - loss의 정확한 비교를 위해 모든 loss function에 대해 $\mathcal{l}_2$ normalization 진행하고 가장 좋은 결과가 나오도록 hyperparameters 조정
@@ -242,7 +242,7 @@ contrastive task에서 positive pair를 찾을 수 있지만, representation 결
 
 **<$\mathcal{l}_2$ normalization의 중요성과 temperature $\tau$ 비교>**
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/tb5.png" width="85%">
+<img src="../assets/images/SimCLR/tb5.png" width="85%">
 </p>
 
 - normalization 안 하고, temperature $\tau$ scale이 적절하지 않으면 결과가 상당히 안 좋음
@@ -250,7 +250,7 @@ contrastive task에서 positive pair를 찾을 수 있지만, representation 결
 
 ## 2) Larger batch size and Longer training
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/fig9.png" width="55%">
+<img src="../assets/images/SimCLR/fig9.png" width="55%">
 <em><br/>batch size 영향력</em>
 </p>
 
@@ -269,13 +269,13 @@ contrastive learning에서는 큰 batch는 더 많은 negative example을 제공
 
 **\<Linear Evaluation\>**
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/tb6.png" width="55%">
+<img src="../assets/images/SimCLR/tb6.png" width="55%">
 <em><br/>다른 self-supervised model과 비교</em>
 </p>
 
 **\<Semi-supervised Learning>**
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/tb7.png" width="55%">
+<img src="../assets/images/SimCLR/tb7.png" width="55%">
 <em><br/>sampling 1% or 10% of ILSVRC-12 training dataset</em>
 </p>
 
@@ -286,6 +286,6 @@ contrastive learning에서는 큰 batch는 더 많은 negative example을 제공
 
 **\<Transfer Learning>**
 <p align="center">
-<img src="../논문-리뷰/assets/images/SimCLR/tb8.png" width="85%">
+<img src="../assets/images/SimCLR/tb8.png" width="85%">
 <em><br/>fixed feature extractor & linear evaluation</em>
 </p>
