--- a/_posts/2022-06-17-SimCLR.md
+++ b/_posts/2022-06-17-SimCLR.md
@@ -231,7 +231,7 @@ contrastive task에서 positive pair를 찾을 수 있지만, representation 결
 전체 loss가 아닌 positive examples과 멀지만, loss margin 내에 있어 거리가 가까운 sample에 대해서 gradient 계산  
 <br/>
 
-**<loss 비교>**
+**\<loss 비교>**
 <p align="center">
 <img src="../assets/images/SimCLR/tb4.png" width="85%">
 </p>
