--- a/_posts/2022-06-12-Quasi-RNN.md
+++ b/_posts/2022-06-12-Quasi-RNN.md
@@ -20,7 +20,7 @@ toc_sticky: false
 # 1. Why Quasi-RNN?
 
 <p align="center">
-<img src = "../assets/images/Quasi-RNN/compare.jpeg" width="60%">
+<img src = "../논문-리뷰/assets/images/Quasi-RNN/compare.jpeg" width="60%">
 </p>
 
 - RNN 장/단점
@@ -136,7 +136,7 @@ $$
 ## 3) Encoder-Decoder Models
 
 <p align="center">
-<img src = "../assets/images/Quasi-RNN/encoder-decoder.jpeg" width="60%">
+<img src = "../논문-리뷰/assets/images/Quasi-RNN/encoder-decoder.jpeg" width="60%">
 </p>
 
 - seq2seq task를 위한 구조 확장
@@ -176,11 +176,11 @@ $$
 ## 1) Sentiment Classification
 <br/>
 <p align="center">
-<img src = "../assets/images/Quasi-RNN/exp_1.jpg" width="65%">
+<img src = "../논문-리뷰/assets/images/Quasi-RNN/exp_1.jpg" width="65%">
 </p>
 
 <p align="center">
-<img src = "../assets/images/Quasi-RNN/exp_2-2.jpg" width="65%">
+<img src = "../논문-리뷰/assets/images/Quasi-RNN/exp_2-2.jpg" width="65%">
 </p>
 
 - Dataset: IMDb movie review dataset
@@ -193,16 +193,16 @@ $$
 ## 2) Language Modeling
 <br/>
 <p align="center">
-<img src = "../assets/images/Quasi-RNN/exp_2.jpg" width="65%">
+<img src = "../논문-리뷰/assets/images/Quasi-RNN/exp_2.jpg" width="65%">
 </p>
 <p align="center">
-<img src = "../assets/images/Quasi-RNN/exp_3.jpg" width="65%">
+<img src = "../논문-리뷰/assets/images/Quasi-RNN/exp_3.jpg" width="65%">
 </p>
 <br/>
 
 ## 3) Character-Level Neural Machine Translation
 <br/>
 <p align="center">
-<img src = "../assets/images/Quasi-RNN/exp_4.jpg" width="65%">
+<img src = "../논문-리뷰/assets/images/Quasi-RNN/exp_4.jpg" width="65%">
 </p>
 <br/>
