--- a/_posts/2022-06-15-CLAR.md
+++ b/_posts/2022-06-15-CLAR.md
@@ -52,7 +52,7 @@ toc_sticky: false
     <br/>  
 
     <p align="center">
-    <img src="../assets/images/CLAR/minibatch.jpeg" width="20%">
+    <img src="../논문-리뷰/assets/images/CLAR/minibatch.jpeg" width="20%">
     </p>  
 
 <br/>
@@ -74,7 +74,7 @@ toc_sticky: false
 ## 1) Audio Pre-processing  
 <br/>
 <p align="center">
-<img src="../assets/images/CLAR/input.png" width="45%">
+<img src="../논문-리뷰/assets/images/CLAR/input.png" width="45%">
 </p>  
 
 - raw audio signal과 time-frequency audio features로 실험 진행
@@ -159,7 +159,7 @@ projection head를 evaluation head가 대체
 # 4. CLAR Framework
 <br/>
 <p align="center">
-<img src="../assets/images/CLAR/fig2.png" width="85%">
+<img src="../논문-리뷰/assets/images/CLAR/fig2.png" width="85%">
 </p>  
 
 - |     | Supervised | Contrastive |
@@ -193,7 +193,7 @@ $$
 - augmentation 할 지 / 안 할 지, 하면 얼만큼 할 건 지 uniform distribution에서 random하게 선택
 
 <p align="center">
-<img src="../assets/images/CLAR/data_augment.png" width="65%">
+<img src="../논문-리뷰/assets/images/CLAR/data_augment.png" width="65%">
 </p>  
 
 ## 1) Frequency Transformation
@@ -235,7 +235,7 @@ $$
 
 # 6. Data Augmentations For Constructive Learning
 <p align="center">
-<img src="../assets/images/CLAR/aug_result.png" width="75%">
+<img src="../논문-리뷰/assets/images/CLAR/aug_result.png" width="75%">
 </p>  
 
 - 대각 성분은 augmentation 1개만 사용
@@ -253,7 +253,7 @@ $$
 
 # 7. Raw Signal vs Time-Frequency Features
 <p align="center">
-<img src="../assets/images/CLAR/1D2D_compare.png" width="75%">
+<img src="../논문-리뷰/assets/images/CLAR/1D2D_compare.png" width="75%">
 </p>  
 
 - **6. Data Augmentations For Constructive Learning**에서 가장 좋았던 augmentation을 사용해서 학습한 encoder freeze
@@ -269,7 +269,7 @@ $$
 
 ## 1) CLAR improves learned representations
 <p align="center">
-<img src="../assets/images/CLAR/other_compare.png" width="55%">
+<img src="../논문-리뷰/assets/images/CLAR/other_compare.png" width="55%">
 </p>  
 
 - top 1 accuracy
@@ -281,7 +281,7 @@ $$
 
 ## 2) CLAR improves the speed og learning representations
 <p align="center">
-<img src="../assets/images/CLAR/labeling_result.png" width="70%">
+<img src="../논문-리뷰/assets/images/CLAR/labeling_result.png" width="70%">
 </p>  
 
 - self-supervised보다 수렴 속도가 빠름
