오타 수정 및 BYOL-A update

--- a/_posts/2022-06-15-CLAR.md
+++ b/_posts/2022-06-15-CLAR.md
@@ -233,7 +233,7 @@ $$
 - rate range: [0.5, 1.5]  
 <br/>
 
-# 6. Data Augmentations For Constructive Learning
+# 6. Data Augmentations For Contrastive Learning
 <p align="center">
 <img src="../assets/images/CLAR/aug_result.png" width="75%">
 </p>  
@@ -256,7 +256,7 @@ $$
 <img src="../assets/images/CLAR/1d2d_compare.png" width="75%">
 </p>  
 
-- **6. Data Augmentations For Constructive Learning**에서 가장 좋았던 augmentation을 사용해서 학습한 encoder freeze
+- **6. Data Augmentations For Contrastive Learning**에서 가장 좋았던 augmentation을 사용해서 학습한 encoder freeze
 - 2D model(Fade in/out + Time Masking)한 결과가 전체적으로 결과가 좋음
 - augmentation을 늘리는 것도 좋지 않음
     - 2D model에서 Time Shifting까지 했을 때, 결과가 더 안 좋음  
