--- a/_posts/2022-06-17-SimCLR.md
+++ b/_posts/2022-06-17-SimCLR.md
@@ -2,7 +2,7 @@
 title: "SimCLR: A Simple Framework for Contrastive Learning of Visual Representations"
 date: 2022-06-17 22:44
 category: "논문-리뷰"
-tag: [Self-Supervised Learning, SSL, Vision]
+tag: [Self-Supervised Learning, Vision]
 
 published: true
 toc: true
