--- a/_posts/2022-06-28-BYOL-A.md
+++ b/_posts/2022-06-28-BYOL-A.md
@@ -2,7 +2,7 @@
 title: "BYOL-A: BYOL for Audio: Exploring Pre-trained General-purpose Audio Representations"
 date: 2022-06-27 18:52
 category: "논문-리뷰"
-tag: [Self-Supervised Learning, SSL, Audio]
+tag: [Self-Supervised Learning, Audio]
 
 published: true
 toc: true
