--- a/_posts/2022-06-12-Quasi-RNN.md
+++ b/_posts/2022-06-12-Quasi-RNN.md
@@ -4,7 +4,7 @@ title: "Quasi-RNN"
 date: 2022-06-12 23:00
 #background: 
 category: "논문-리뷰"
-tag: [Quasi-RNN, text]
+tag: [RNN, text]
 #classes: wide
 published: true
 
