--- a/_posts/2022-06-15-CLAR.md
+++ b/_posts/2022-06-15-CLAR.md
@@ -2,7 +2,7 @@
 title: "CLAR: Contrastive Learning of Auditory Representations"
 date: 2022-06-15 23:39
 category: "논문-리뷰"
-tag: [Self-Supervised Learning, SSL, Audio]
+tag: [Self-Supervised Learning, Audio]
 
 published: true
 toc: true
