--- a/_posts/2022-06-17-SimCLR.md
+++ b/_posts/2022-06-17-SimCLR.md
@@ -64,6 +64,10 @@ contrastive self-supervised learning without specialized architectures or a memo
         - $z_i=g(h_i)=W^{(2)}\sigma(W^{(1)}h_i)$
         - $\sigma$ = ReLU
         - $h_i$에서보다 $z_i$에서 contrastive loss 계산하는게 더 좋음 (**4.Architectures for Encoder and Head**)  
+        <br/>
+    4. **contrastive loss function**  
+    <br/>
+        
 - mini-batch 구성
     - N 개의 examples를 random sampling한 후에, augmented pair로 만들어서 최종적으로 2N 개의 data points로 구성된 mini-batch를 듦
     - positive pair만 주고, 나머지 $2(N-1)$개는 negative examples
