--- a/_posts/2022-06-15-CLAR.md
+++ b/_posts/2022-06-15-CLAR.md
@@ -279,7 +279,7 @@ $$
 - CLAR의 label 비율을 줄일 수록 self-supervised보다 accuracy가 작아지는데, 효율적인 representation을 찾아내기보다 적은 수의 label에 overfitting한 결과로 볼 수도 있음  
 <br/>
 
-## 2) CLAR improves the speed og learning representations
+## 2) CLAR improves the speed of learning representations
 <p align="center">
 <img src="../assets/images/CLAR/labeling_result.png" width="70%">
 </p>  
