--- a/_posts/2022-06-28-BYOL-A.md
+++ b/_posts/2022-06-28-BYOL-A.md
@@ -135,7 +135,7 @@ encoder 개선점에 대해 쓰지 않음
 |global average/max pooling| COLA, TRILL, ESResNe(X)t-fbsp|
 |average freq $rightarrow$ summarize time| 아래에 추가 |
 
-- PANNs: CNN14 model에서 frequency average $rightarrow$ temporal pooling operation(_temporal mean+max pooling_)
+- PANNs: CNN14 model에서 frequency average $\rightarrow$ temporal pooling operation(_temporal mean+max pooling_)
 - Fonseca et al.: frequency average $\rightarrow$ temporal max pooling
 - Ford et al.: frequency average pooling $\rightarrow$ attention module  
 <br/>
