--- a/_posts/2022-06-28-BYOL-A.md
+++ b/_posts/2022-06-28-BYOL-A.md
@@ -282,8 +282,8 @@ task label을 가지고 linear layer 학습
 - embedding들은 linear layer에 들어가기 전에 standardized  
 <br/>
 
-- linear layer 200 epoch 학습, ear;y stopping 20 epoch
-- Adam Optimizer(lr: 0.00001 \sim  0.01)
+- linear layer 200 epoch 학습, early stopping 20 epoch
+- Adam Optimizer(lr: 0.00001 $\sim$  0.01)
 - 3번 학습한 결과의 평균값  
 <br/>
 
