--- a/_posts/2022-06-28-BYOL-A.md
+++ b/_posts/2022-06-28-BYOL-A.md
@@ -9,10 +9,13 @@ toc: true
 toc_sticky: false
 ---
 
-> [BYOL-A: BYOL for Audio: Exploring Pre-trained General-purpose Audio Representations](https://arxiv.org/pdf/2204.07402.pdf)
+> [BYOL-A: BYOL for Audio: Exploring Pre-trained General-purpose Audio Representations](https://arxiv.org/pdf/2204.07402.pdf)  
+> [BYOL-A official github](https://github.com/nttcslab/byol-a)
 
 연관 포스트:
 1. [Audio Self-supervised Learning: A Survey (1) Audio]({% post_url 2022-05-30-Audio-SSL-A-Survey-(2) %})
+
+BYOL-A 2번째 논문
 
 > **Abstract**
 > 1. input sound의 여러가지 측면에서 robust feature를 추출하는게  
