--- a/_posts/2022-06-12-Quasi-RNN.md
+++ b/_posts/2022-06-12-Quasi-RNN.md
@@ -146,7 +146,7 @@ $$
         - decoder pooling layer로 전달되는 gate나 update value에 encoder state가 영향 주지 않음
         - decoder의 representational power limit
     - 각 decoder의 convolution function output은 최종 encoder hidden state로 보충됨
-        - convolution layer $l$의 output 값들(e.g. $W_z^l * X^l in \mathbb{R}^{T\times m}$)을 layer $l$의 마지막 encoder state(e.g. $V_z^l \tilde{h}_T^l in \mathbb{R}^{Tm}$)의 linearly projected copy($V_z^l$)에 broadcasting해서 더해줌
+        - convolution layer $l$의 output 값들(e.g. $W_z^l * X^l \in \mathbb{R}^{T\times m}$)을 layer $l$의 마지막 encoder state(e.g. $V_z^l \tilde{h}_T^l \in \mathbb{R}^{Tm}$)의 linearly projected copy($V_z^l$)에 broadcasting해서 더해줌
         
         $$
         Z^l=tanh(W^l_z * X^l+V^l_z\tilde{h}^l_T)  \\
