--- a/_posts/2022-06-12-Quasi-RNN.md
+++ b/_posts/2022-06-12-Quasi-RNN.md
@@ -127,7 +127,7 @@ $$
 ## 2) Densely-Connected Layers
 
 - 모든 QRNN layer 사이에 skip-connection 쓰는 게 도움됨
-    - gradient flow & convergense
+    - gradient flow & convergence
     - 하지만 layer 개수에 대해서는 quadratic 해야함
 - QRNN layer의 input을 다음 layer에 전달하기 전에 channel dimension으로 concatenation하는 것과 동일
 - 마지막 layer의 output은 전반적인 encoding 결과 의미  
