--- a/_posts/2022-08-23-Data2Vec.md
+++ b/_posts/2022-08-23-Data2Vec.md
@@ -3,7 +3,7 @@ title: "data2vec: A General Framework for Self-supervised Learning in Speech, Vi
 date: 2022-08-23 19:30
 category: "논문-리뷰"
 tag: [Audio, Text, Vision, Data2Vec]
-published: true
+published: false
 
 toc: true
 toc_sticky: false
