--- a/_posts/2023-06-27-pwa-정리(1).md
+++ b/_posts/2023-06-27-pwa-정리(1).md
@@ -7,7 +7,13 @@ published: true
 toc: true
 toc_sticky: false
 ---
-**교재: Do it! 프로그레시브 웹앱 만들기 - [실습 github](https://github.com/codedesign-webapp)**
+> **교재: Do it! 프로그레시브 웹앱 만들기 - [실습 github](https://github.com/codedesign-webapp)**
+<br><br>
+
+연관 포스트: 
+1. [PWA 정리(2): 구성 요소]({% post_url 2023-06-27-pwa-정리(2) %})
+2. [PWA 정리(3): Vue & Vuetify]({% post_url 2023-06-27-pwa-정리(3)})
+<br><br>
 
 ## **핵심 기술**
 - 서비스 워커<br>
@@ -113,34 +119,34 @@ const fnSayHello = () => '안녕하세요!';
     - Prominse는 비동기 처리 방식(독립적으로 실행&별도로 처리) 사용, 결과의 성공과 실패 관리
     - 코드를 실행할 함수 생성 부분과 결과 반환 받는 부분으로 나누어 작성
     - 여러가지를 사용할 때, 처리 속도는 다 다르지만 실행 순서 보장
-    ```html
-    <button onclick=
-        "console.log('Promise 시작!');
-        let bStatus = Math.random() > 0.5;
-        fnCreatePromise(bStatus)
-            .then(pResult => console.log(pResult)) //성공
-            .catch(pErrorMsg => console.log(pErrorMsg)); //실패
-        console.log('Promise 종료');">상품 배송 시작!</button>
+    - ```html
+      <button onclick=
+          "console.log('Promise 시작!');
+          let bStatus = Math.random() > 0.5;
+          fnCreatePromise(bStatus)
+              .then(pResult => console.log(pResult)) //성공
+              .catch(pErrorMsg => console.log(pErrorMsg)); //실패
+          console.log('Promise 종료');">상품 배송 시작!</button>
 
 
-      function fnCreatePromise(pStatus){
-              // 성공하면 fnResolve 실행, 실패하면 fnReject 실행
-              // 각 함수 안의 값의 return 해준다(?)
-              return new Promise((fnResolve, fnReject) => {
-                  setTimeout(() => {
-                      if (pStatus) //
-                          fnResolve('배달이 성공적으로 완료되었습니다');
-                      else 
-                          fnReject('죄송합니다 아직 상품이 준비되지 못하였습니다');
-                  }, 3000);
-              });
-          }
+        function fnCreatePromise(pStatus){
+                // 성공하면 fnResolve 실행, 실패하면 fnReject 실행
+                // 각 함수 안의 값의 return 해준다(?)
+                return new Promise((fnResolve, fnReject) => {
+                    setTimeout(() => {
+                        if (pStatus) //
+                            fnResolve('배달이 성공적으로 완료되었습니다');
+                        else 
+                            fnReject('죄송합니다 아직 상품이 준비되지 못하였습니다');
+                    }, 3000);
+                });
+            }
 
-    >> 결과 <<
-    Promise 시작!
-    Promise 종료
-    배달이 성공적으로 완료되었습니다/죄송합니다 아직 상품이 준비되지 못하였습니다
-    ```
+      /* 결과 
+      Promise 시작!
+      Promise 종료
+      배달이 성공적으로 완료되었습니다/죄송합니다 아직 상품이 준비되지 못하였습니다 */
+      ```
 
 <br>
 
