--- a/_posts/2023-06-27-pwa-3.md
+++ b/_posts/2023-06-27-pwa-3.md
@@ -11,8 +11,8 @@ toc_sticky: false
 <br><br>
 
 연관 포스트: 
-1. [PWA 정리(1): 기초 정리]({% post_url 2023-06-27-pwa-정리(1) %})
-2. [PWA 정리(2): 구성 요소]({% post_url 2023-06-27-pwa-정리(2) %})
+1. [PWA 정리(1): 기초 정리]({% post_url 2023-06-27-pwa-1 %})
+2. [PWA 정리(2): 구성 요소]({% post_url 2023-06-27-pwa-2 %})
 <br><br>
 
 # Vue
