--- a/_posts/2023-06-27-pwa-2.md
+++ b/_posts/2023-06-27-pwa-2.md
@@ -8,11 +8,10 @@ toc: true
 toc_sticky: false
 ---
 > **교재: Do it! 프로그레시브 웹앱 만들기 - [실습 github](https://github.com/codedesign-webapp)**
-<br><br>
 
 연관 포스트: 
 1. [PWA 정리(1): 기초 정리]({% post_url 2023-06-27-pwa-1 %})
-2. [PWA 정리(3): Vue & Vuetify]({% post_url 2023-06-27-pwa-3})
+2. [PWA 정리(3): Vue & Vuetify]({% post_url 2023-06-27-pwa-3 %})
 <br><br>
 
 ## 웹앱 매니페스트
