--- a/_posts/2023-06-27-pwa-3.md
+++ b/_posts/2023-06-27-pwa-3.md
@@ -8,7 +8,6 @@ toc: true
 toc_sticky: false
 ---
 > **교재: Do it! 프로그레시브 웹앱 만들기 - [실습 github](https://github.com/codedesign-webapp)**
-<br><br>
 
 연관 포스트: 
 1. [PWA 정리(1): 기초 정리]({% post_url 2023-06-27-pwa-1 %})
@@ -17,17 +16,17 @@ toc_sticky: false
 
 # Vue
 ## Vue 구성
-- javascript 프레임워크
-- ```html
-  <!-- 뷰 cdn에 연결 -->
+- javascript 프레임워크  
+- ```js 
+  // 뷰 cdn에 연결 
   <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
   ```
 - ```js
-  // <p> {{ vueData }} </p>
+  // <p> {% raw %}{{ vueData }}{% endraw %} </p> 
   new Vue({
         el:'#name' //연결할 element 
         data:{
-            vueData: 'hi' // {{ }}(머스태시)에 전달될 값들
+            vueData: 'hi' // {% raw %}{{ }}{% endraw %}(머스태시)에 전달될 값들
         },
         methods: {
             // **이벤트** 발생시키거나 기능을 위한 function 정의
@@ -39,12 +38,14 @@ toc_sticky: false
         }
   })
   ```
-  - {{ }}: 머스태시, HTML의 element
+ <!-- % endraw % -->  
+- {% raw %}{{ }}{% endraw %}: 머스태시, HTML의 element
 <br>
 
 ## v-bind & v-model
 - **v-bind**는 HTML의 element의 attribute
 - 단방향: HTML attribute에 값 전달
+    <!-- % raw % --> 
     ```html
     <!-- blue_style: {color: blue} 
          Vue data:{sColor: 'blue'} -->
@@ -55,22 +56,25 @@ toc_sticky: false
     
     <!-- 결과: 파란색 글씨의 "제목입니다" 표시 -->
     ```
+    <!-- % endraw % --> 
 - **v-model**은 양방향, 즉 변수에 따라 결과가 달라짐
-- ```html
+- <!-- % raw % -->
+  ```html 
   <!-- Vue data:{sMsg: 'hi'} -->
 
-  <p>{{ sMsg }}</p>
+  <p>{% raw %}{{ sMsg }}{% endraw %}</p>
   <input v-model:value="sMsg">
 
   <!-- 결과: <p></p> 안의 값이 원래 "hi"였는데,
              input에 쓰는 값에 따라 달라짐 -->
   ```
+  <!-- % endraw % -->
 <br>
 
 ## v-if & v-for
 - **v-if**는 조건에 따라 바인딩
     ```html
-    <p>{{ bFlag }}</p>
+    <p>{% raw %}{{ bFlag }}{% endraw %}</p>
     <p v-if=" bFlag == true"> true <\p>
     <p v-else> false <\p>
     ```
@@ -83,8 +87,8 @@ toc_sticky: false
     <ul v-for="(item, index) in aElementList">
         <!-- index는 위 (item, index)처럼 가지고 올 수 있음 -->
         <!-- item만 가져오기도 가능 -->
-        <li>번호: {{ index }}</li> 
-        <li>이름: {{ item.sName }}</li>
+        <li>번호:{% raw %}{{ index }}{% endraw %}</li> 
+        <li>이름:{% raw %}{{ item.sName }}{% endraw %}</li>
     </ul>
     ```
 <br>
@@ -98,10 +102,10 @@ toc_sticky: false
                             }
                        } -->
 
-    <h1> {{ title }} </h1>
+    <h1> {% raw %}{{ title }}{% endraw %} </h1>
     <button v-on:click="fnChangeTitle">버튼입니다</button>
     
-    <!-- 결과: <h1> {{ title }} </h1> 안의 값이 원래 "hi"였는데,
+    <!-- 결과: <h1> {% raw %}{{ title }}{% endraw %} </h1> 안의 값이 원래 "hi"였는데,
                버튼을 누르면 "안녕"으로 바뀜 -->
     ```
 <br>
@@ -115,7 +119,7 @@ toc_sticky: false
                             }
                        } -->
 
-    <p> {{ fnChangeCapital }} <p>
+    <p> {% raw %}{{ fnChangeCapital }}{% endraw %} <p>
 
     <!-- 결과: HI -->  
     ```
@@ -137,7 +141,7 @@ toc_sticky: false
         template: `
         <div>
             <div v-for="item in aFruits" class="fruit_style">
-                <p> {{ item.sName }} </p>
+                <p> {% raw %}{{ item.sName }}{% endraw %} </p>
             </div>
             <br>
         </div>`, // 역따옴표로 표현하기
@@ -150,7 +154,7 @@ toc_sticky: false
     ```js
     Vue.component('favorite-fruits', {
         props:['fruit'],
-        template: `<li>{{ fruit.text }}</li>`
+        template: `<li>{% raw %}{{ fruit.text }}{% endraw %}</li>`
     })
 
     var app = new Vue({
