--- a/_posts/2023-06-27-pwa-1.md
+++ b/_posts/2023-06-27-pwa-1.md
@@ -8,11 +8,10 @@ toc: true
 toc_sticky: false
 ---
 > **교재: Do it! 프로그레시브 웹앱 만들기 - [실습 github](https://github.com/codedesign-webapp)**
-<br><br>
 
 연관 포스트: 
 1. [PWA 정리(2): 구성 요소]({% post_url 2023-06-27-pwa-2 %})
-2. [PWA 정리(3): Vue & Vuetify]({% post_url 2023-06-27-pwa-3})
+2. [PWA 정리(3): Vue & Vuetify]({% post_url 2023-06-27-pwa-3 %})
 <br><br>
 
 ## **핵심 기술**
@@ -119,7 +118,8 @@ const fnSayHello = () => '안녕하세요!';
     - Prominse는 비동기 처리 방식(독립적으로 실행&별도로 처리) 사용, 결과의 성공과 실패 관리
     - 코드를 실행할 함수 생성 부분과 결과 반환 받는 부분으로 나누어 작성
     - 여러가지를 사용할 때, 처리 속도는 다 다르지만 실행 순서 보장
-    - ```html
+    - <!-- % raw % -->
+      ```html
       <button onclick=
           "console.log('Promise 시작!');
           let bStatus = Math.random() > 0.5;
@@ -147,6 +147,7 @@ const fnSayHello = () => '안녕하세요!';
       Promise 종료
       배달이 성공적으로 완료되었습니다/죄송합니다 아직 상품이 준비되지 못하였습니다 */
       ```
+      <!-- % endraw % -->
 
 <br>
 
